test/scripts/traefik-values.yaml
providers:
  kubernetesGateway:
    enabled: true
    controllerName: "traefik.io/routeapi-main-controller"
    labelselector: "app.kubernetes.io/instance=traefik-traefik"
